first draft with notes

--- a/urban-octo-telegram-main/Develop/index.html
+++ b/urban-octo-telegram-main/Develop/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>HoriSEOn SEO Marketing Agency</title>
+    <link  rel="icon" type="image/png" sizes="32x32" href="https://img.icons8.com/ios-filled/50/000000/management.png">
 </head>
 
 <body>
 <!--headline with quicklinks-->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,15 +24,15 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </div>
-    <div class="hero" title="working together to succeed"></div>
+    <div class="hero" title="Working together at Horiseon to succeed at SEO and ADA requirements"></div>
 <!--Banner background image in CSS class hero-->
 <!--left column-->
     <div class="content">
 <!--search Engine Optimization section-->
         <div id="#search-engine-optimization" class="content-sub">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimizaion generic" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimizaion generic SEO notebook and laptop on a desk" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -39,15 +40,15 @@
         </div>
 <!--online reputation mgmt section-->
         <div id="online-reputation-management" class="content-sub">
-            <img src="./assets/images/online-reputation-management.jpg" alt="Online reputation management generic" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="Online reputation management generic laptop with a site reading reputation and graphs" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-<!--social media markin section-->-->
+<!--social media markin section-->
         <div id="social-media-marketing" class="content-sub">
-            <img src="./assets/images/social-media-marketing.jpg" alt="social media marketing generic" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="company representatives with different social media titles in thought bubbles" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
